--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,12 +27,8 @@
 
   --section-width: 87%;
   --section-max-width: 1252px;
-}
-
-@media (max-width: 767px) {
-  :root {
-    --section-width: 90%;
-  }
+  --section-top-padding: 120px;
+  --page-top-padding: 160px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -78,7 +74,6 @@ body {
   font-size: 20px;
   line-height: 1.2;
   color: var(--body);
-  overflow-x: clip;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -104,4 +99,44 @@ h3 {
   font-size: 36px;
   font-weight: 700;
   color: var(--heading);
+}
+
+@media (max-width: 1023px) {
+  :root {
+    --section-top-padding: 100px;
+    --page-top-padding: 120px;
+  }
+
+  body {
+    font-size: 18px;
+  }
+
+  h1 {
+    font-size: 48px;
+  }
+
+  h2 {
+    font-size: 36px;
+  }
+
+  h3 {
+    font-size: 32px;
+  }
+}
+
+@media (max-width: 767px) {
+  :root {
+    --section-width: 90%;
+    --section-top-padding: 64px;
+  }
+
+  body {
+    font-size: 16px;
+  }
+
+  h1,
+  h2,
+  h3 {
+    font-size: 28px;
+  }
 }
